<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".search"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="142dp">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="384dp"
        android:layout_height="506dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.648"
        app:srcCompat="@drawable/texture2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="154dp"
        android:layout_height="71dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.976"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img" />

    <EditText
        android:id="@+id/ritemcodes"
        android:layout_width="130dp"
        android:layout_height="49dp"
        android:ems="10"
        android:gravity="center"
        android:textColor="@color/black"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.268" />

    <EditText
        android:id="@+id/rdisplayname"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:background="@drawable/custom"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.73"
        app:layout_constraintStart_toEndOf="@+id/name" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/name"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.376" />

    <EditText
        android:id="@+id/rdisplayexpd"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:background="@drawable/custom"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/expd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.735"
        app:layout_constraintStart_toEndOf="@+id/expd" />

    <TextView
        android:id="@+id/expd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/expd"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.627" />

    <EditText
        android:id="@+id/rdisplayquantity"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:background="@drawable/custom"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/quantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.769"
        app:layout_constraintStart_toEndOf="@+id/quantity" />

    <TextView
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/quantity"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.464" />

    <EditText
        android:id="@+id/rdisplaymfd"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:background="@drawable/custom"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/mfd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toEndOf="@+id/mfd" />

    <TextView
        android:id="@+id/mfd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/mfd"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.543" />

    <EditText
        android:id="@+id/rdisplayprice"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:background="@drawable/custom"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.776"
        app:layout_constraintStart_toEndOf="@+id/price" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:text="@string/price"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.707" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="154dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/simplemeds2" />

    <Button
        android:id="@+id/update1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/amazonblue"
        android:text="@string/update"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/delete"
        app:layout_constraintHorizontal_bias="0.402"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.838" />

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:backgroundTint="@color/amazonblue"
        android:text="@string/delete"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.838" />

</androidx.constraintlayout.widget.ConstraintLayout>

