<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".search">

    <Button
        android:id="@+id/search"
        android:layout_width="162dp"
        android:layout_height="60dp"
        android:layout_marginBottom="44dp"
        android:backgroundTint="@color/white"
        android:text="@string/search"
        android:textColor="@color/amazonblue"
        app:layout_constraintBottom_toTopOf="@+id/addnew"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/addnew"
        android:layout_width="162dp"
        android:layout_height="60dp"
        android:layout_marginBottom="167dp"
        android:backgroundTint="@color/white"
        android:text="@string/addnew"
        android:textColor="@color/amazonblue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="191dp"
        android:layout_height="39dp"
        android:layout_marginBottom="298dp"
        app:layout_constraintBottom_toTopOf="@+id/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/simplemeds2" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="140dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="39dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:srcCompat="@drawable/img" />

    <EditText
        android:id="@+id/searchField"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="464dp"
        android:background="@color/white"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/searchField"
        android:inputType="text"
        android:textColor="@color/amazonblue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>