<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".newitems">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="360dp"
        android:layout_height="496dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.595"
        app:srcCompat="@drawable/texture2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="115dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img" />

    <TextView
        android:id="@+id/itemCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/itemCode"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Icode"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Name"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Iname"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.334" />

    <TextView
        android:id="@+id/Quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Quantity"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Iquatity"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.417" />

    <TextView
        android:id="@+id/MFD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:text="@string/MFD"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Expd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:text="@string/EXPD"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.584" />

    <TextView
        android:id="@+id/Price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Price"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Iprice"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.671" />

    <EditText
        android:id="@+id/Icode"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginEnd="36dp"
        android:autofillHints=""
        android:background="@drawable/custom"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/black"
        app:layout_constraintBaseline_toBaselineOf="@+id/itemCode"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/Iname"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginEnd="36dp"
        android:autofillHints=""
        android:background="@drawable/custom"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/black"
        app:layout_constraintBaseline_toBaselineOf="@+id/Name"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/Iquatity"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginEnd="36dp"
        android:autofillHints=""
        android:background="@drawable/custom"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/Quantity"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/Iprice"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginEnd="36dp"
        android:autofillHints=""
        android:background="@drawable/custom"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/Price"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck,SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="141dp"
        android:layout_height="37dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@drawable/simplemeds2" />

    <Button
        android:id="@+id/add"
        android:layout_width="125dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/amazonblue"
        android:text="@string/add"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.826" />

    <EditText
        android:id="@+id/IMFD"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/custom"
        android:hint="dd/mm/yyyy"
        android:gravity="center"
        android:ems="10"
        android:inputType="date"
        android:textColor="@color/black"
        app:layout_constraintBaseline_toBaselineOf="@+id/MFD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/MFD" />

    <EditText
        android:id="@+id/IEXPD"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/custom"
        android:hint="dd/mm/yyyy"
        android:gravity="center"
        android:ems="10"
        android:inputType="date"
        android:textColor="@color/black"
        app:layout_constraintBaseline_toBaselineOf="@+id/Expd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/Expd" />

</androidx.constraintlayout.widget.ConstraintLayout>